--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "neon-testing",
   "module": "index.ts",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "dependencies": {
+    "@neondatabase/api-client": "^2.0.0"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.2"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 }
