--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "test": "vitest",
     "format": "prettier --write .",
     "release": "bun publish",
-    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc",
+    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc && vitest run && prettier --check .",
     "postpublish": "git tag v$(bun -p \"require('./package.json').version\") && git push --tags"
   },
   "dependencies": {
-    "@neondatabase/api-client": "^2.0.0"
+    "@neondatabase/api-client": "^2.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.8.3",
-    "vitest": "^3.2.2"
+    "vitest": "^3.2.4"
   },
   "devDependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^16.5.0",
-    "pg": "^8.16.0",
+    "pg": "^8.16.2",
     "postgres": "^3.4.7",
     "prettier": "^3.5.3"
   }
