--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "Preserve",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
