--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "prettier": "^3.6.2",
