--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Link package for self-referential imports
+        run: bun link
+
       - name: Run tests
         env:
           # https://github.com/starmode-base/neon-testing/settings/variables/actions
