--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Link package for self-referential imports
-        run: bun link
+      - name: Install local package for package-name imports
+        run: bun add file:.
 
       - name: Run tests
         env:
