Revert "Update test.yml"
This reverts commit c406a1bba4beca9af9188aa0cc57567dcd56358a.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Install local package for package-name imports
-        run: bun add file:.
+      - name: Link package for self-referential imports
+        run: bun link
 
       - name: Run tests
         env:
