--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,6 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    // "baseUrl": "."
-    "paths": {
-      "neon-testing": ["./index.ts"]
-    }
+    "noEmit": true
   }
 }
