--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neon-testing",
-  "version": "1.0.2",
-  "description": "A Vitest utility for automated integration tests with Neon",
+  "version": "1.1.0",
+  "description": "A Vitest utility for seamless integration tests with Neon Postgres",
   "keywords": [
     "neon",
     "postgres",
