--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
-    "noEmit": true,
-    "baseUrl": "."
+    "noEmit": true
   }
 }
