--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "release:minor": "bun pm version minor && bun publish --tag latest",
     "release:major": "bun pm version major && bun publish --tag latest",
     "release:beta": "bun pm version prerelease --preid=beta && bun publish --tag beta",
-    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc && vitest run && prettier --check .",
-    "postpublish": "git tag v$(bun -p \"require('./package.json').version\") && git push --tags"
+    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc && vitest run && prettier --check ."
   },
   "dependencies": {
     "@neondatabase/api-client": "^2.2.0"
