--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "release:minor": "bun pm version minor && bun publish --tag latest",
     "release:major": "bun pm version major && bun publish --tag latest",
     "release:beta": "bun pm version prerelease --preid=beta && bun publish --tag beta",
-    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc && vitest run && prettier --check .",
+    "prepublishOnly": "tsc && vitest run && prettier --check .",
     "postpublish": "git push --tags"
   },
   "dependencies": {
