--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "test": "vitest",
     "format": "prettier --write .",
     "build": "rm -rf dist && tsc -p tsconfig.build.json && cp vitest-setup.js dist/",
-    "release:patch": "bun pm version patch && bun run build && bun publish --tag latest",
-    "release:minor": "bun pm version minor && bun run build && bun publish --tag latest",
-    "release:major": "bun pm version major && bun run build && bun publish --tag latest",
-    "release:beta": "bun pm version prerelease --preid=beta && bun run build && bun publish --tag beta",
+    "release:patch": "bun pm version patch && bun publish --tag latest",
+    "release:minor": "bun pm version minor && bun publish --tag latest",
+    "release:major": "bun pm version major && bun publish --tag latest",
+    "release:beta": "bun pm version prerelease --preid=beta && bun publish --tag beta",
     "prepublishOnly": "bun run build && vitest run && prettier --check .",
     "postpublish": "git push --follow-tags"
   },
