--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
   },
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "vitest-setup.js"
+    "dist"
   ],
   "scripts": {
-    "test": "bun run build && vitest",
+    "test": "vitest run",
     "format": "prettier --write .",
-    "build": "rm -rf dist && tsc -p tsconfig.build.json && cp vitest-setup.js dist/",
+    "build": "rm -rf dist && tsc -p tsconfig.build.json",
     "release:patch": "bun pm version patch && bun publish --tag latest",
     "release:minor": "bun pm version minor && bun publish --tag latest",
     "release:major": "bun pm version major && bun publish --tag latest",
