--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "dist"
   ],
   "scripts": {
-    "test": "bun run build && vitest run",
-    "format": "prettier --write .",
     "build": "rm -rf dist && tsc",
-    "preversion": "bun run build && vitest run && prettier --check .",
+    "test": "vitest run",
+    "format": "prettier --write .",
+    "preversion": "bun run build && bun run test && bun run format",
     "release:patch": "bun run preversion && bun pm version patch && bun publish --tag latest",
     "release:minor": "bun run preversion && bun pm version minor && bun publish --tag latest",
     "release:major": "bun run preversion && bun pm version major && bun publish --tag latest",
