--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neon-testing",
-  "version": "2.0.1-beta.15",
+  "version": "2.0.1-beta.14",
   "description": "A Vitest utility for seamless integration tests with Neon Postgres",
   "keywords": [
     "neon",
@@ -36,7 +36,7 @@
     "build": "rm -rf dist && tsc",
     "test": "vitest run",
     "format": "prettier --write .",
-    "preversion": "bun run build && bun run test && bun run format",
+    "preversion": "bun run build && bun run test && bunx prettier --check .",
     "release:patch": "bun run preversion && bun pm version patch && bun publish --tag latest",
     "release:minor": "bun run preversion && bun pm version minor && bun publish --tag latest",
     "release:major": "bun run preversion && bun pm version major && bun publish --tag latest",
