--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         run: bun -v
 
       - name: Install dependencies
-        run: bun install
+        run: tsc
 
       - name: Build
         run: bun run build
@@ -50,4 +50,4 @@ jobs:
           # https://github.com/starmode-base/neon-testing/settings/secrets/actions
           NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
           NEON_PROJECT_ID: ${{ vars.NEON_PROJECT_ID }}
-        run: bun run test
+        run: bunx vitest run
