--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,10 @@ jobs:
         run: bun -v
 
       - name: Install dependencies
-        run: tsc
+        run: bun install
 
       - name: Build
-        run: bun run build
+        run: tsc
 
       - name: Run format
         run: bunx prettier --check .
