--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Build
+        run: tsc
+
+      - name: Run format
+        run: bunx prettier --check .
+
       - name: Run tests
         env:
           # https://github.com/starmode-base/neon-testing/settings/variables/actions
