--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neon-testing",
-  "version": "2.0.0",
+  "version": "2.0.1-beta.21",
   "description": "A Vitest utility for seamless integration tests with Neon Postgres",
   "keywords": [
     "neon",
@@ -15,19 +15,28 @@
   "bugs": "https://github.com/starmode-base/neon-testing/issues",
   "type": "module",
   "exports": {
-    ".": "./index.ts",
-    "./utils": "./singleton.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils.d.ts",
+      "import": "./dist/utils.js"
+    }
   },
   "files": [
-    "index.ts",
-    "singleton.ts"
+    "dist"
   ],
   "scripts": {
+    "build": "rm -rf dist && tsc",
     "test": "vitest",
     "format": "prettier --write .",
-    "release": "bun publish",
-    "prepublishOnly": "git diff-index --quiet HEAD || (echo 'Error: You have uncommitted changes' && exit 1) && tsc && vitest run && prettier --check .",
-    "postpublish": "git tag v$(bun -p \"require('./package.json').version\") && git push --tags"
+    "check": "bun run build && bunx vitest run && bunx prettier --check .",
+    "release:patch": "bun run check && bun pm version patch && bun publish --tag latest",
+    "release:minor": "bun run check && bun pm version minor && bun publish --tag latest",
+    "release:major": "bun run check && bun pm version major && bun publish --tag latest",
+    "release:beta": "bun run check && bun pm version prerelease --preid=beta && bun publish --tag beta",
+    "postpublish": "git push --follow-tags"
   },
   "dependencies": {
     "@neondatabase/api-client": "^2.2.0"
