--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "Preserve",
+    "module": "ESNext",
     "moduleResolution": "Bundler",
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
-    "noEmit": true
-  }
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "dist"
+  },
+  "include": ["*.ts"],
+  "exclude": ["dist", "examples", "node_modules", "vitest.config.ts"]
 }
