--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dist"
   ],
   "scripts": {
+    "dev": "tsc --watch",
     "build": "rm -rf dist && tsc",
     "test": "vitest",
     "format": "prettier --write .",
