--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neon-testing",
-  "version": "2.1.1",
+  "version": "2.1.2-beta.1",
   "description": "A Vitest utility for seamless integration tests with Neon Postgres",
   "keywords": [
     "neon",
@@ -22,12 +22,17 @@
     "./utils": {
       "types": "./dist/utils.d.ts",
       "import": "./dist/utils.js"
+    },
+    "./vite": {
+      "types": "./dist/vite-plugin.d.ts",
+      "import": "./dist/vite-plugin.js"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
+    "dev": "tsc --watch",
     "build": "rm -rf dist && tsc",
     "test": "vitest",
     "format": "prettier --write .",
@@ -46,7 +51,7 @@
   },
   "devDependencies": {
     "@neondatabase/serverless": "^1.0.1",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
@@ -54,5 +59,8 @@
     "typescript": "^5.9.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
+  },
+  "browser": {
+    "./dist/vite-plugin.js": "./dist/browser-empty.js"
   }
 }
