--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postgres": "^3.4.7",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
+    "vite": "^7.1.12",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
