--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "peerDependencies": {
     "vite": "^7",
-    "vitest": "^3"
+    "vitest": "^3 || ^4"
   },
   "devDependencies": {
     "@neondatabase/serverless": "^1.0.2",
@@ -60,7 +60,7 @@
     "typescript": "^5.9.3",
     "vite": "^7.1.12",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.1"
   },
   "browser": {
     "./dist/vite-plugin.js": "./dist/browser-empty.js"
