--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "."
   },
-  "include": ["*.ts"],
-  "exclude": ["dist", "examples", "node_modules", "vitest.config.ts"]
+  "exclude": ["dist", "node_modules"]
 }
