--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "prettier": "^3.6.2",
+    "tiny-invariant": "^1.3.3",
     "typescript": "^5.9.3",
     "vite": "^7.2.1",
     "vite-tsconfig-paths": "^5.1.4",
