--- a/package.json
+++ b/package.json
@@ -54,15 +54,17 @@
   },
   "devDependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@types/pg": "^8.15.6",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "prettier": "^3.6.2",
+    "tiny-invariant": "^1.3.3",
     "typescript": "^5.9.3",
-    "vite": "^7.2.1",
+    "vite": "^7.2.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.7"
+    "vitest": "^4.0.8"
   },
   "browser": {
     "./dist/vite-plugin.js": "./dist/browser-empty.js"
