--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neon-testing",
-  "version": "2.2.0",
+  "version": "2.2.1-beta.0",
   "description": "A Vitest utility for seamless integration tests with Neon Postgres",
   "keywords": [
     "neon",
