--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "dist",
-    "rootDir": "."
+    "noEmit": true
   },
   "exclude": ["dist", "node_modules"]
 }
