--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test": "vitest",
     "clean:soft": "rm -rf node_modules dist && bun install",
     "clean:hard": "rm -rf node_modules dist bun.lock && bun install",
-    "check": "bun run typecheck && bun run build && bunx vitest run && bunx prettier --check .",
+    "check": "bun run build && bun run typecheck && bunx vitest run && bunx prettier --check .",
     "release:patch": "bun run check && bun pm version patch && bun publish --tag latest",
     "release:minor": "bun run check && bun pm version minor && bun publish --tag latest",
     "release:major": "bun run check && bun pm version major && bun publish --tag latest",
