--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,16 +38,10 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Build
-        run: bun run build
-
-      - name: Run format
-        run: bun run check
-
-      - name: Run tests
+      - name: Run checks
         env:
           # https://github.com/starmode-base/neon-testing/settings/variables/actions
           # https://github.com/starmode-base/neon-testing/settings/secrets/actions
           NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
           NEON_PROJECT_ID: ${{ vars.NEON_PROJECT_ID }}
-        run: bunx vitest run
+        run: bun run check
