--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
   "scripts": {
     "dev": "tsc -p tsconfig.build.json --watch",
     "build": "rm -rf dist && tsc -p tsconfig.build.json",
-    "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest",
+    "check": "bun run build && bun run tsc && bunx vitest run && bunx prettier --check .",
     "clean:soft": "rm -rf node_modules dist && bun install",
     "clean:hard": "rm -rf node_modules dist bun.lock && bun install",
-    "check": "bun run build && bun run typecheck && bunx vitest run && bunx prettier --check .",
     "release:patch": "bun run check && bun pm version patch && bun publish --tag latest",
     "release:minor": "bun run check && bun pm version minor && bun publish --tag latest",
     "release:major": "bun run check && bun pm version major && bun publish --tag latest",
