--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
   ],
   "scripts": {
     "dev": "tsc -p tsconfig.build.json --watch",
-    "build": "rm -rf dist && tsc -p tsconfig.build.json",
+    "build": "rm -rf dist && tsc -p tsconfig.build.json && bun run tsc && bunx vitest run && bunx prettier --check .",
     "format": "prettier --write .",
     "test": "vitest",
-    "check": "bun run build && bun run tsc && bunx vitest run && bunx prettier --check .",
     "clean:soft": "rm -rf node_modules dist && bun install",
     "clean:hard": "rm -rf node_modules dist bun.lock && bun install",
-    "release:patch": "bun run check && bun pm version patch && bun publish --tag latest",
-    "release:minor": "bun run check && bun pm version minor && bun publish --tag latest",
-    "release:major": "bun run check && bun pm version major && bun publish --tag latest",
-    "release:beta": "bun run check && bun pm version prerelease --preid=beta && bun publish --tag beta",
+    "release:patch": "bun run build && bun pm version patch && bun publish --tag latest",
+    "release:minor": "bun run build && bun pm version minor && bun publish --tag latest",
+    "release:major": "bun run build && bun pm version major && bun publish --tag latest",
+    "release:beta": "bun run build && bun pm version prerelease --preid=beta && bun publish --tag beta",
     "postpublish": "git push --follow-tags"
   },
   "dependencies": {
