--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # https://github.com/actions/checkout
-      - uses: actions/checkout@v6
+      - name: Checkout
+        # https://github.com/actions/checkout
+        uses: actions/checkout@v6
 
       - name: Setup Node.js
         # https://github.com/actions/setup-node
