--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "test": "vitest",
     "clean:soft": "rm -rf node_modules dist && bun install",
     "clean:hard": "rm -rf node_modules dist bun.lock && bun install",
-    "release:patch": "bun run build && bun pm version patch && bun publish --tag latest",
-    "release:minor": "bun run build && bun pm version minor && bun publish --tag latest",
-    "release:major": "bun run build && bun pm version major && bun publish --tag latest",
-    "release:beta": "bun run build && bun pm version prerelease --preid=beta && bun publish --tag beta",
-    "postpublish": "git push --follow-tags"
+    "release:patch": "bun pm version patch",
+    "release:minor": "bun pm version minor",
+    "release:major": "bun pm version major",
+    "release:beta": "bun pm version prerelease --preid=beta",
+    "release:beta:patch": "bun pm version prepatch --preid=beta",
+    "release:beta:minor": "bun pm version preminor --preid=beta",
+    "release:beta:major": "bun pm version premajor --preid=beta",
+    "postversion": "git push --follow-tags"
   },
   "dependencies": {
     "@neondatabase/api-client": "^2.2.0"
